--- a/src/marts/dbt/carris_transformations/profiles.yml
+++ b/src/marts/dbt/carris_transformations/profiles.yml
@@ -1,7 +1,17 @@
 carris_transformations:
   outputs:
-    dev:
+    prod:
       dataset: applied_project_mart_grupo_1
+      job_execution_timeout_seconds: 300
+      job_retries: 1
+      location: EU
+      method: oauth
+      priority: interactive
+      project: data-eng-dev-437916
+      threads: 4
+      type: bigquery
+    dev:
+      dataset: applied_project_mart_grupo_1_dev
       job_execution_timeout_seconds: 300
       job_retries: 1
       location: EU
