--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -24,9 +24,9 @@ jobs:
       with:
         project_id: data-eng-dev-437916
     
-    - name: Upload file with gsutil
-      run: |
-        gsutil cp merge_gtfs_and_endpoint.py  gs://applied-project/grupo-1/scripts
+    # - name: Upload file with gsutil
+    #   run: |
+    #     gsutil cp merge_gtfs_and_endpoint.py  gs://applied-project/grupo-1/scripts
         
     - name: Configure Docker for Artifact Registry
       run: |
