--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -34,7 +34,7 @@ jobs:
         
     - name: Build Docker image
       run: |
-        docker build -t europe-west1-docker.pkg.dev/data-eng-dev-437916/dbt-grupo-1/test-grupo1 .
+        docker build -t europe-west1-docker.pkg.dev/data-eng-dev-437916/dbt-grupo-1/test-grupo1 src/orchestration/cloud_run_jobs
         
     - name: Push Docker image
       run: |
