--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -24,10 +24,9 @@ jobs:
       with:
         project_id: data-eng-dev-437916
     
-    # - name: Upload file with gsutil
-    #   run: |
-    #     gsutil cp merge_gtfs_and_endpoint.py  gs://applied-project/grupo-1/scripts
-
+    - name: Upload spark scripts with gsutil
+      run: |
+        gsutil cp src/staging/spark/explode_array_columns.py src/staging/spark/load_to_bigquery.py src/staging/spark/merge_gtfs_and_endpoint.py  gs://applied-project/grupo-1/scripts
 
     - name: Configure Docker for Artifact Registry
       run: |
@@ -40,4 +39,13 @@ jobs:
     - name: Push Docker image
       run: |
         docker push europe-west1-docker.pkg.dev/data-eng-dev-437916/dbt-grupo-1/test-grupo1
+
+    - name: Deploy to Cloud Run
+      run: |
+        gcloud run deploy test-grupo1 \
+          --image europe-west1-docker.pkg.dev/data-eng-dev-437916/dbt-grupo-1/test-grupo1 \
+          --region europe-west1 \
+          --platform managed \
+          --allow-unauthenticated \
+          --project data-eng-dev-437916
         
