revision of dims and yml

--- a/src/marts/dbt/carris_transformations/profiles.yml
+++ b/src/marts/dbt/carris_transformations/profiles.yml
@@ -1,5 +1,5 @@
 carris_transformations:
-  target: "{{ env_var('TARGET') }}"
+  target: dev
   outputs:
     prod:
       dataset: applied_project_mart_grupo_1
